@@ -1,5 +1,13 @@
 2011-02-19  Ivan Maidanski  <ivmai@mail.ru>
 
+	* src/atomic_ops.c: Include sys/time.h (to get timespec) for NaCl.
+	* src/atomic_ops_malloc.c (msb): Do the shift by 32 only once (in
+	a conditional expression) to prevent a compiler warning.
+	* src/atomic_ops_malloc.c: Expand all tabs to spaces; remove
+	trailing spaces at EOLn.
+
+2011-02-19  Ivan Maidanski  <ivmai@mail.ru>
+
 	* src/atomic_ops.c: Explicitly define AO_USE_NO_SIGNALS and
 	AO_USE_NANOSLEEP for NaCl.
 
